--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,88 +22,9 @@ on:
       EC2_PASSPHRASE:
         required: true
 
-env:
-  NODE_VERSION: 16
-
 jobs:
 
-  docker_publish:
-    name: 🐳 DockerHub Publish
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: "☁️ Check out Git Repository"
-        uses: actions/checkout@v2
-
-      - name: "🔧 Set up Node"
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-
-      - name: "⚡ Cache [CLIENT] node modules"
-        uses: actions/cache@v2
-        id: npm_client_cache_id
-        with:
-          path: ./client/node_modules
-          key: client-${{ runner.os }}-npm-cache-${{ hashFiles('./client/package-lock.json') }}
-          restore-keys: |
-            client-${{ runner.os }}-npm-cache-
-            client-${{ runner.os }}-
-
-      - name: "📦 Install [CLIENT] dependencies"
-        working-directory: ./client
-        if: steps.npm_client_cache_id.outputs.cache-hit != 'true'
-        run: npm install
-
-      - name: "⚡ Cache [SERVER] node modules"
-        uses: actions/cache@v2
-        id: npm_server_cache_id
-        with:
-          path: ./server/node_modules
-          key: server-${{ runner.os }}-npm-cache-${{ hashFiles('./server/package-lock.json') }}
-          restore-keys: |
-            server-${{ runner.os }}-npm-cache-
-            server-${{ runner.os }}-
-
-      - name: "📦 Install [SERVER] dependencies"
-        working-directory: ./server
-        if: steps.npm_server_cache_id.outputs.cache-hit != 'true'
-        run: npm install
-
-      - name: "🔒 Login to DockerHub"
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: 🔧 Create .env file
-        run: |
-          echo ${{ secrets.ENV_PRODUCTION }} > .env
-          cp .env ./client/.env
-
-      - name: 🐳 DockerHub Publish
-        run:
-          docker-compose build &&
-          docker-compose push
-
-      # - name: "🔧 Set up Docker Buildx"
-      #   uses: docker/setup-buildx-action@v1
-
-      # - name: "🐳 Publish to DockerHub Registry"
-      #   uses: docker/build-push-action@v2
-      #   env:
-      #     DOCKERHUB_REPO: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_SERVER_REPO }}
-      #   with:
-      #     context: ${{ env.working-directory }}
-      #     file: Dockerfile
-      #     builder: ${{ steps.buildx.outputs.name }}
-      #     push: true
-      #     tags: ${{ env.DOCKERHUB_REPO }}:latest
-      #     cache-from: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache
-      #     cache-to: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache,mode=max
-
   deploy_ec2:
-    needs: [docker_publish]
     name: 🚀 EC2 Depoyment
     runs-on: ubuntu-latest
 
@@ -123,7 +44,7 @@ jobs:
             echo -e "$GREEN Connected to the EC2 Instance! $NC"
             exit 0
 
-      - name: "♻️ Deploy Docker Containers"
+      - name: "🐳 Deploy Docker Containers"
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_REMOTE_HOST }}
@@ -146,6 +67,7 @@ jobs:
             # ls -a
             echo -e "$GREEN Created the production .env file $NC"
 
+            docker kill $(docker ps -q)
             docker system prune -a --volumes -f
             echo -e "$RED Removed existing Docker containers $NC"
 
@@ -154,12 +76,29 @@ jobs:
             echo -e "$BLUE Authenticating Docker $NC"
             docker login -u="${{ secrets.DOCKERHUB_USERNAME }}" -p="${{ secrets.DOCKERHUB_PASSWORD }}"
 
-            docker run --env-file ./.env -d -p 5000:5000 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_SERVER_REPO }}:latest --name ${{ secrets.DOCKERHUB_SERVER_REPO }}
+            docker run --env-file ./.env -d -p 5000:5000 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_SERVER_REPO }}:latest
             echo -e "$BLUE Started up latest Server image $NC"
 
-            docker run --env-file ./.env -d -p 80:3000 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_CLIENT_REPO }}:latest
+            docker run --env-file ./.env -d -p 3000:3000 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_CLIENT_REPO }}:latest
             echo -e "$BLUE Started up latest Server image $NC"
 
             sudo iptables -t nat -A PREROUTING -i eth0 -p tcp --dport 80 -j REDIRECT --to-port 3000
 
             echo -e "$GREEN EC2 deployment complete! $NC"
+
+
+# - name: "🔧 Set up Docker Buildx"
+#   uses: docker/setup-buildx-action@v1
+
+# - name: "🐳 Publish to DockerHub Registry"
+#   uses: docker/build-push-action@v2
+#   env:
+#     DOCKERHUB_REPO: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_SERVER_REPO }}
+#   with:
+#     context: ${{ env.working-directory }}
+#     file: Dockerfile
+#     builder: ${{ steps.buildx.outputs.name }}
+#     push: true
+#     tags: ${{ env.DOCKERHUB_REPO }}:latest
+#     cache-from: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache
+#     cache-to: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache,mode=max
