--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -16,28 +16,26 @@ jobs:
         uses: actions/checkout@v2
 
       - name: "🔧 Set up Node"
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: 16
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
 
-      - name: "⚡ Cache node modules"
-        uses: actions/cache@v2
-        id: npm_cache_id
+      - uses: actions/cache@v3
+        id: modules-cache
         with:
-          path: node_modules
-          key: lint-${{ runner.os }}-npm-cache-${{ hashFiles('./package-lock.json') }}
-          restore-keys: |
-            lint-${{ runner.os }}-npm-cache-
-            lint-${{ runner.os }}-
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
-      - name: "📦 Install linter dependencies"
-        if: steps.npm_cache_id.outputs.cache-hit != 'true'
+      - name: "📦 Install dependencies"
+        if: steps.modules-cache.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "🧽 Lint all files"
         run: npm run lint --if-present
 
-  client_ci:
+  client_test:
     needs: [repo_lint]
     runs-on: ${{ matrix.os }}
     env:
@@ -61,23 +59,20 @@ jobs:
           mv .env.sample ${{ env.working-directory }}/.env
 
       - name: "🔧 Set up Node"
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
 
-      - name: "⚡ Cache node modules"
-        uses: actions/cache@v2
-        id: npm_cache_id
+      - uses: actions/cache@v3
+        id: modules-cache
         with:
-          path: ./client/node_modules
-          key: client-${{ runner.os }}-npm-cache-${{ hashFiles('./client/package-lock.json') }}
-          restore-keys: |
-            client-${{ runner.os }}-npm-cache-
-            client-${{ runner.os }}-
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: "📦 Install dependencies"
-        working-directory: ${{ env.working-directory }}
-        if: steps.npm_cache_id.outputs.cache-hit != 'true'
+        if: steps.modules-cache.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "✅  Run tests"
@@ -98,11 +93,48 @@ jobs:
           path: ${{ env.working-directory }}/coverage/lcov.info
           retention-days: 3
 
+  client_build:
+    needs: [repo_lint]
+    runs-on: ${{ matrix.os }}
+    env:
+      working-directory: ./client
+    strategy:
+      fail-fast: false
+      matrix:
+        node: ['12', '14', '16']
+        os: [ubuntu-latest]
+
+    name: Client Build
+    steps:
+      - name: "☁️ Check out Git Repository"
+        uses: actions/checkout@v2
+
+      - name: "⚙️ Generate .env file"
+        run: |
+          mv .env.sample ${{ env.working-directory }}/.env
+
+      - name: "🔧 Set up Node"
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
+
+      - uses: actions/cache@v3
+        id: modules-cache
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+
+      - name: "📦 Install dependencies"
+        if: steps.modules-cache.outputs.cache-hit != 'true'
+        run: npm install
+
       - name: "🏗 Build client"
         working-directory: ${{ env.working-directory }}
         run: npm run build --if-present
 
-  server_ci:
+  server_test:
     needs: [repo_lint]
     runs-on: ${{ matrix.os }}
     env:
@@ -127,23 +159,20 @@ jobs:
         uses: actions/checkout@v2
 
       - name: "🔧 Set up Node"
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
 
-      - name: "⚡ Cache node modules"
-        uses: actions/cache@v2
-        id: npm_cache_id
+      - uses: actions/cache@v3
+        id: modules-cache
         with:
-          path: ./server/node_modules
-          key: server-${{ runner.os }}-npm-cache-${{ hashFiles('./server/package-lock.json') }}
-          restore-keys: |
-            server-${{ runner.os }}-npm-cache-
-            server-${{ runner.os }}-
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: "📦 Install dependencies"
-        working-directory: ${{ env.working-directory }}
-        if: steps.npm_cache_id.outputs.cache-hit != 'true'
+        if: steps.modules-cache.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "✅  Run tests"
@@ -164,51 +193,49 @@ jobs:
           path: ${{ env.working-directory }}/coverage/lcov.info
           retention-days: 3
 
-  coverage_comment:
-    name: Coverage Upload
-    permissions:
-      checks: write
-      pull-requests: write
-    needs: [client_ci, server_ci]
-    runs-on: ubuntu-latest
+  # coverage_comment:
+  #   name: Coverage Upload
+  #   permissions:
+  #     checks: write
+  #     pull-requests: write
+  #   needs: [client_test, server_test]
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: "⬇️ Download the client test coverage report"
-        uses: actions/download-artifact@v3
-        with:
-          name: client-coverage
+  #   steps:
+  #     - name: "⬇️ Download the client test coverage report"
+  #       uses: actions/download-artifact@v3
+  #       with:
+  #         name: client-coverage
 
-      - name: "📜 Copy the client coverage file"
-        run: |
-          mv coverage-final.json client-coverage-final.json
+  #     - name: "📜 Copy the client coverage file"
+  #       run: |
+  #         mv coverage-final.json client-coverage-final.json
+  #     - name: "⬇️ Download the server test coverage report"
+  #       uses: actions/download-artifact@v3
+  #       with:
+  #         name: server-coverage
 
-      - name: "⬇️ Download the server test coverage report"
-        uses: actions/download-artifact@v3
-        with:
-          name: server-coverage
+  #     - name: "📜 Copy the server coverage file"
+  #       run: |
+  #         mv coverage-final.json server-coverage-final.json
+  #     - name: "🔧 Set up Node"
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: ${{ matrix.node }}
 
-      - name: "📜 Copy the server coverage file"
-        run: |
-          mv coverage-final.json server-coverage-final.json
+  #     - name: "🔀 Merge the coverage reports"
+  #       run: npx istanbul-merge --out coverage-final.json ./client-coverage-final.json ./server-coverage-final.json
 
-      - name: "🔧 Set up Node"
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node }}
-
-      - name: "🔀 Merge the coverage reports"
-        run: npx istanbul-merge --out coverage-final.json ./client-coverage-final.json ./server-coverage-final.json
-
-      - name: "⬆️ Comment test coverage report"
-        uses: AthleticNet/comment-test-coverage@1.1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          path: ./coverage-final.json
-          title: Woofer Test Coverage
+  #     - name: "⬆️ Comment test coverage report"
+  #       uses: AthleticNet/comment-test-coverage@1.1
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         path: ./coverage-final.json
+  #         title: Woofer Test Coverage
 
   coverage_upload:
     name: Coverage Coveralls.io Upload
-    needs: [client_ci, server_ci]
+    needs: [client_test, server_test]
     runs-on: ubuntu-latest
 
     steps:
@@ -220,7 +247,6 @@ jobs:
       - name: "📜 Copy the client lcov coverage file"
         run: |
           mv lcov.info client-report.lcov
-
       - name: "⬇️ Download the server test coverage lcov report"
         uses: actions/download-artifact@v3
         with:
@@ -229,9 +255,8 @@ jobs:
       - name: "📜 Copy the server lcov coverage file"
         run: |
           mv lcov.info server-report.lcov
-
       - name: "🔧 Set up Node"
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
 
