--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -164,7 +164,7 @@ jobs:
 
       - name: "Build Docker client image"
         working-directory: ./client
-        run: docker build . -t client--cache-from=localhost:5000/client--build-arg BUILDKIT_INLINE_CACHE=1
+        run: docker build . -t client --cache-from=localhost:5000/client--build-arg BUILDKIT_INLINE_CACHE=1
 
       - name: "Tag local Docker client image build"
         run: docker tag clientlocalhost:5000/client&& docker push localhost:5000/client|| true
@@ -180,7 +180,7 @@ jobs:
 
       - name: "Build Docker server image"
         working-directory: ./server
-        run: docker build . -t server--cache-from=localhost:5000/server--build-arg BUILDKIT_INLINE_CACHE=1
+        run: docker build . -t server --cache-from=localhost:5000/server--build-arg BUILDKIT_INLINE_CACHE=1
 
       - name: "Tag local Docker server image build"
         run: docker tag server:5000/server&& docker push localhost:5000/server|| true
