--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -1,4 +1,4 @@
-name: branch_check
+name: Branch CI
 
 on:
   push:
@@ -9,11 +9,9 @@ on:
 jobs:
 
   node_ci:
+    name: Node CI
     uses: ./.github/workflows/node_ci.yml
 
   docker_ci:
+    name: Docker CI
     uses: ./.github/workflows/docker_ci.yml
-    secrets:
-      ENV_PRODUCTION: ${{ secrets.ENV_PRODUCTION }}
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
